# llm-experiments

./: README.md  pyproject.toml  pyrightconfig.json
01_pretraining/: main.py  main2.py  main3.py
01_pretraining/models/: __init__.py  fc_model.py  rnn_model.py  transformer_model.py
